@@ -14,7 +14,7 @@
         <maven.compiler.target>19</maven.compiler.target>
         <spring.version>6.2.3</spring.version>
         <hibernate.version>6.5.2.Final</hibernate.version>
-        <thymeleaf.version>3.1.2.RELEASE</thymeleaf.version>
+        <thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>
         <mysql.connector.version>8.0.33</mysql.connector.version>
         <slf4j.version>2.0.9</slf4j.version>
         <logback.version>1.4.11</logback.version>
@@ -58,8 +58,8 @@
         <!-- Thymeleaf для шаблонов -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf-spring6</artifactId>
-            <version>${thymeleaf.version}</version> <!-- Используйте версию, указанную в <properties> -->
+            <artifactId>thymeleaf-spring5</artifactId>
+            <version>${thymeleaf.version}</version>
         </dependency>
 
         <dependency>
@@ -105,111 +105,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.2</version>
+                <version>3.3.1</version>
+                <configuration>
+                    <warSourceDirectory>src/main/webapp</warSourceDirectory>  <!-- Исправленный путь -->
+                    <warName>Spring_MVC</warName> <!-- Убрал имя из конфига, используется finalName -->
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
             </plugin>
         </plugins>
     </build>
 </project>
-        <!--        <?xml version="1.0" encoding="UTF-8"?>-->
-        <!--        <project xmlns="http://maven.apache.org/POM/4.0.0"-->
-        <!--                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
-        <!--                 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
-        <!--            <modelVersion>4.0.0</modelVersion>-->
-
-        <!--            <groupId>web</groupId>-->
-        <!--            <artifactId>spring_mvc_hibernate</artifactId>-->
-        <!--            <version>1.0-SNAPSHOT</version>-->
-
-        <!--            <packaging>war</packaging>-->
-
-        <!--            <properties>-->
-        <!--                <maven.compiler.source>1.8</maven.compiler.source>-->
-        <!--                <maven.compiler.target>1.8</maven.compiler.target>-->
-        <!--                <spring.version>6.2.3</spring.version>  &lt;!&ndash; ОПРЕДЕЛЕНИЕ ВЕРСИИ SPRING &ndash;&gt;-->
-        <!--                <hibernate.version>5.6.12.Final</hibernate.version>-->
-        <!--                <thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>-->
-        <!--                <mysql.connector.version>8.0.30</mysql.connector.version>-->
-        <!--            </properties>-->
-
-        <!--            <dependencies>-->
-
-        <!--                &lt;!&ndash; https://mvnrepository.com/artifact/org.springframework/spring-webmvc &ndash;&gt;-->
-        <!--                <dependency>-->
-        <!--                    <groupId>org.springframework</groupId>-->
-        <!--                    <artifactId>spring-webmvc</artifactId>-->
-        <!--                    <version>6.2.3</version>-->
-        <!--                </dependency>-->
-
-        <!--                &lt;!&ndash; https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api &ndash;&gt;-->
-        <!--                <dependency>-->
-        <!--                    <groupId>javax.persistence</groupId>-->
-        <!--                    <artifactId>javax.persistence-api</artifactId>-->
-        <!--                    <version>2.2</version>-->
-        <!--                </dependency>-->
-
-
-        <!--                <dependency>-->
-        <!--                    <groupId>org.hibernate.orm</groupId>-->
-        <!--                    <artifactId>hibernate-core</artifactId>-->
-        <!--                    &lt;!&ndash;            <version>6.5.2.Final</version>&ndash;&gt;-->
-        <!--                </dependency>-->
-
-        <!--                <dependency>-->
-        <!--                    <groupId>org.springframework</groupId>-->
-        <!--                    <artifactId>spring-jdbc</artifactId>-->
-        <!--                    <version>6.2.3</version>-->
-        <!--                </dependency>-->
-
-        <!--                <dependency>-->
-        <!--                    <groupId>javax.servlet</groupId>-->
-        <!--                    <artifactId>javax.servlet-api</artifactId>-->
-        <!--                    <version>4.0.1</version>-->
-        <!--                    <scope>provided</scope>-->
-        <!--                </dependency>-->
-
-        <!--                <dependency>-->
-        <!--                    <groupId>jakarta.servlet</groupId>-->
-        <!--                    <artifactId>jakarta.servlet-api</artifactId>-->
-        <!--                    <version>6.0.0</version>  &lt;!&ndash; Или более новую версию &ndash;&gt;-->
-        <!--                    <scope>provided</scope>-->
-        <!--                </dependency>-->
-
-        <!--                &lt;!&ndash; https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf &ndash;&gt;-->
-        <!--                <dependency>-->
-        <!--                    <groupId>org.thymeleaf</groupId>-->
-        <!--                    <artifactId>thymeleaf</artifactId>-->
-        <!--                    <version>3.0.15.RELEASE</version>-->
-        <!--                </dependency>-->
-
-
-        <!--            </dependencies>-->
-        <!--            <build>-->
-        <!--                <pluginManagement>-->
-        <!--                    <plugins>-->
-        <!--                        <plugin>-->
-        <!--                            <groupId>org.apache.maven.plugins</groupId>-->
-        <!--                            <artifactId>maven-war-plugin</artifactId>-->
-        <!--                            <version>2.4</version>-->
-        <!--                            <configuration>-->
-        <!--                                <warSourceDirectory>../PP_2_2_2_spring-mvc/src/webapp</warSourceDirectory>-->
-        <!--                                <warName>spring_mvc</warName>-->
-        <!--                                <failOnMissingWebXml>false</failOnMissingWebXml>-->
-        <!--                            </configuration>-->
-        <!--                        </plugin>-->
-        <!--                    </plugins>-->
-        <!--                </pluginManagement>-->
-        <!--                <plugins>-->
-        <!--                    <plugin>-->
-        <!--                        <groupId>org.apache.maven.plugins</groupId>-->
-        <!--                        <artifactId>maven-compiler-plugin</artifactId>-->
-        <!--                        <configuration>-->
-        <!--                            <source>21</source>-->
-        <!--                            <target>21</target>-->
-        <!--                            &lt;!&ndash;                    <compilerArgs>--enable-preview</compilerArgs>&ndash;&gt;-->
-        <!--                        </configuration>-->
-        <!--                    </plugin>-->
-        <!--                </plugins>-->
-        <!--                <finalName>Spring_MVC</finalName>-->
-        <!--            </build>-->
-
-        <!--        </project>-->
